--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.0.5",
+    "@mui/lab": "^5.0.0-alpha.54",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
