--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^6.0.0",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
